--- a/hackmd/hackmd.yml
+++ b/hackmd/hackmd.yml
@@ -33,28 +33,14 @@ services:
     env_file: /share/appdata/config/hackmd/hackmd.env
     networks:
       - internal
-
-  proxy:
-    image: bitnami/oauth2-proxy:latest
-    env_file: /share/appdata/config/hackmd/hackmd.env
-    networks:
-      - internal
       - traefik_public
     deploy:
       labels:
         - traefik.frontend.rule=Host:hackmd.example.com
         - traefik.docker.network=traefik_public
-        - traefik.port=4180
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - /share/appdata/config/hackmd/authenticated-emails.txt:/authenticated-emails.txt
-    command: |
-      -cookie-secure=true
-      -upstream=http://app:3000
-      -redirect-url=https://hackmd.example.com
-      -http-address=http://0.0.0.0:4180
-      -provider=github
-      -authenticated-emails-file=/authenticated-emails.txt   
+        - traefik.port=3000
+        - "traefik.frontend.auth.forward.address=http://192.168.200.2:8080/authorize"
+        - "traefik.frontend.auth.forward.authResponseHeaders=X-FORWARDAUTH-NAME, X-FORWARDAUTH-SUB, X-FORWARDAUTH-EMAIL"
 
 networks:
   traefik_public:
