--- a/kanboard/kanboard.yml
+++ b/kanboard/kanboard.yml
@@ -8,27 +8,14 @@ services:
       - /share/appdata/kanboard/plugins:/var/www/app/plugins
     networks:
       - internal
-
-  proxy:
-    image: bitnami/oauth2-proxy:latest
-    env_file: /share/appdata/config/kanboard/kanboard.env
-    networks:
-      - internal
       - traefik_public
     deploy:
       labels:
         - traefik.frontend.rule=Host:kanboard.example.com
         - traefik.docker.network=traefik_public
-        - traefik.port=4180
-    volumes:
-      - /share/appdata/config/kanboard/authenticated-emails.txt:/authenticated-emails.txt
-    command: |
-      -cookie-secure=false
-      -upstream=http://kanboard
-      -redirect-url=https://kanboard.example.com
-      -http-address=http://0.0.0.0:4180
-      -provider=github
-      -authenticated-emails-file=/authenticated-emails.txt
+        - traefik.port=80
+        - "traefik.frontend.auth.forward.address=http://192.168.200.2:8080/authorize"
+        - "traefik.frontend.auth.forward.authResponseHeaders=X-FORWARDAUTH-NAME, X-FORWARDAUTH-SUB, X-FORWARDAUTH-EMAIL"
 
 networks:
   traefik_public:
