--- a/phpipam/phpipam.yml
+++ b/phpipam/phpipam.yml
@@ -2,15 +2,15 @@ version: "3"
 
 services:
   db:
-    image: mariadb:10
+    image: mariadb:latest
     env_file: /share/appdata/config/phpipam/phpipam.env
     networks:
       - internal
     volumes:
       - /share/appdata/runtime/phpipam/db:/var/lib/mysql
 
-  proxy:
-    image: bitnami/oauth2-proxy
+  app:
+    image: pierrecdn/phpipam
     env_file: /share/appdata/config/phpipam/phpipam.env
     networks:
       - internal
@@ -19,37 +19,12 @@ services:
       labels:
         - traefik.frontend.rule=Host:phpipam.example.com
         - traefik.docker.network=traefik_public
-        - traefik.port=4180
-    volumes:
-      - /share/appdata/config/phpipam/authenticated-emails.txt:/authenticated-emails.txt
-    command: |
-      -cookie-secure=false
-      -upstream=http://nginx
-      -redirect-url=https://phpipam.example.com
-      -http-address=http://0.0.0.0:4180
-      -email-domain=example.com
-      -provider=github
-      -authenticated-emails-file=/authenticated-emails.txt
-
-  # Wait, what? Why do we have an oauth_proxy _and_ an nginx frontend for a simple webapp?
-  # Well, it's a long story. Basically, the phpipam container sees the "auth" headers passed by the
-  # oauth_proxy, and decides to use these exclusively to authenticate users. So no web-based login form, just "access denied"
-  # To work around this, we add nginx reverse proxy to the mix. A PITA, but an easy way to solve without altering the PHPIPAM code
-  nginx:
-    image: nginx:latest
-    networks:
-      - internal
-    volumes:
-      - /share/appdata/phpipam/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-
-  app:
-    image: pierrecdn/phpipam
-    env_file: /share/appdata/config/phpipam/phpipam.env
-    networks:
-      - internal
+        - traefik.port=80
+        - "traefik.frontend.auth.forward.address=http://192.168.200.2:8080/authorize"
+        - "traefik.frontend.auth.forward.authResponseHeaders=X-FORWARDAUTH-NAME, X-FORWARDAUTH-SUB, X-FORWARDAUTH-EMAIL"
 
   db-backup:
-    image: mariadb:10
+    image: mariadb:latest
     env_file: /share/appdata/config/phpipam/phpipam.env
     volumes:
       - /share/appdata/phpipam/database-dump:/dump
