--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -1,12 +1,19 @@
-version: "3"
+version: "3.3"
 
 services:
   app:
     image: traefik:latest
     env_file: /share/appdata/config/traefik/traefik.env
     ports:
-      - 80:80
-      - 443:443
+      - target: 80
+        published: 80
+        mode: host
+      - target: 443
+        published: 443
+        mode: host
+      - target: 8080
+        published: 8085
+        mode: host
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /share/appdata/config/traefik:/etc/traefik
